kubernetes/apps/auth-system/keycloak/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  labels:
    app: keycloak
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: authorization-server
    app.kubernetes.io/part-of: auth-system
spec:
  parentRefs:
    - name: envoy-auth
      namespace: network
      sectionName: https
  hostnames:
    - auth.matherly.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 8080
